# ur_msgs

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  package.xml
.github/workflows/: ci_bionic.yml  ci_ros2_stable.yml
msg/: VersionInformation.msg
srv/: GetVersion.srv  SetForceMode.srv  SetIO.srv
